# django_controle_financeiro

./: .gitignore  README.md  config.py  pyproject.toml  settings.yaml
controle_financeiro/: asgi.py  settings.py  urls.py  wsgi.py
despesas/: admin.py  despesa_serializer.py  models.py  tests.py  urls.py  views.py
despesas/migrations/: 0001_initial.py  0002_alter_despesasmodel_descricao.py  0003_alter_despesasmodel_descricao.py  0004_despesasmodel_categoria.py
receitas/: models.py  receitas_serializer.py  tests.py  urls.py  views.py
receitas/migrations/: 0001_initial.py  0002_receitasmodel_delete_receitas.py
resumo/: tests.py  urls.py  views.py
