[tool.poetry]
name = "django_controle_financeiro"
version = "0.1.0"
description = "Um projeto proposto pela alura no AluraChallengeBackend"
authors = ["jacksonsr451 <jackson.severino.rocha@escola.pr.gov.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
djangorestframework = "^3.13.1"
Markdown = "^3.4.1"
django-filter = "^22.1"
dynaconf = "^3.1.9"
python-env = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
